# linkedin

./: .gitignore  LICENSE  README.md  pyproject.toml
linkedin/: linkedin.py  main.py  urls.json
scrape_and_count/: jobs.json  keywords.json  main.py  scrape_and_count.py
tests/: test_word_count.py
