[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrape-and-count"
version = "0.0.1"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3"
]
requires-python = ">=3.12.5"
authors = [
  { name="kaxcheg", email="kaxcheg@gmail.com" },
]
description = "Simple keyword counter"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ['keyword', 'scraping']
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]